feat: full api for admin/dashboard
